completed numbers portion

--- a/starter-code/views/index.html
+++ b/starter-code/views/index.html
@@ -17,6 +17,16 @@
     <form id="target-number-form">
       <input id="new-num" name="number" placeholder="enter new target number" type="text" />
       <input type="submit" />
+
+    <h2>Art Gallery!</h2>
+    <form id="new-artwork-form">
+      <input id="new-title" name="title" placeholder="Title" type="text" />
+      <input id="new-desc" name="description" placeholder="Description" type="text" />
+      <input id="new-artist" name="artist" placeholder="Artist" type="text" />
+      <input type="submit" />
+    </form>
+
+
     </form>
   </body>
 </html>
